<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="prefs_file_name" translatable="false">Main preferences</string>
    <string name="database_file_name" translatable="false">database.db</string>
    <string name="app_theme" translatable="false">appTheme</string>
    <string name="search_history" translatable="false">searchHistory</string>
    <string name="player_layout" translatable="false">playerLayout</string>
    <string name="undefined" translatable="false">undefined</string>
    <string name="service_name">Медиа служба</string>
    <string name="service_description">Служба для проигрывания музыки</string>
    <string name="image_view_stub">иконка</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="btn_create">Создать</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="add_to_playlist_success">Добавлено в плейлист</string>
    <string name="add_to_playlist_error">Трек уже добавлен в плейлист</string>
    <string name="create_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_dialog_cancel">Отмена</string>
    <string name="create_playlist_dialog_finish">Завершить</string>
    <string name="playlist_minute">минута,минуты,минут</string>
    <string name="playlist_track">трек,трека,треков</string>
    <string name="playlist_empty">В этом плейлисте нет треков</string>
    <string name="remove_track_title">Удалить трек</string>
    <string name="remove_track_message">Хотите удалить трек?</string>
    <string name="dialog_message_yes">Да</string>
    <string name="dialog_message_no">Нет</string>
    <string name="playlist_share_error">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_remove_dialog_message">Хотите удалить плейлист?</string>
    <string name="share_playlist">Поделиться</string>
    <string name="share_playlist_error">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="remove_playlist_message">Хотите удалить плейлист?</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_failure">Проблемы со связью\n\nЗагрузка не удалась\nПроверьте подключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_btn_clear">Очистить историю</string>
    <string name="history_delete_item">Удалить</string>
    <string name="history_add_to_fav">Нравится</string>
    <string name="history_remove_from_fav">Не нравится</string>
    <string name="player_duration">Длительность</string>
    <string name="default_duration_start" translatable="false">00 : 00</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="player_unknown">Неизвестно</string>
    <string name="update">Обновить</string>
    <string name="media_library">Медиатека</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="empty_medialibrary">Ваша медиатека пуста</string>
    <string name="media_library_search_hint">Введите название песни</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тема приложения</string>
    <string name="theme_save_key" translatable="false">theme name</string>
    <string name="theme_dark">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share_app_content" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="contact_support_email" translatable="false">ey-blyat@yandex.ru</string>
    <string name="contact_support_subject">Сообщение разработчикам приложения Playlist Maker</string>
    <string name="contact_support_text">Спасибо разработчикам за крутое приложение!</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_content" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="itunes_base_url" translatable="false">https://itunes.apple.com</string>
    <string name="db_file_name" translatable="false">database</string>
    <string name="no_internet_connection">Отсутствует подключение к сети</string>
    <string name="close">Убрать</string>
</resources>