<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    style="@style/LayoutFullScreen"
    tools:ignore="MissingConstraints">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/Theme.PlaylistMaker.AppBarOverlay"
        android:paddingBottom="@dimen/padding_small_8x">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Theme.PlaylistMaker.PopupOverlay"
            app:title="@string/search" />

        <include
            android:id="@+id/search_layout"
            layout="@layout/layout_search" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_small_8x"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/android:colorBackground"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <FrameLayout
                android:id="@+id/nothing_found"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?attr/android:colorBackground"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <TextView
                    style="@style/AlertText"
                    android:text="@string/nothing_found"
                    app:drawableTopCompat="@drawable/nothing_found" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/network_failure"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?attr/android:colorBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@null"
                tools:visibility="visible">

                <TextView
                    style="@style/AlertText"
                    android:text="@string/network_failure"
                    app:drawableTopCompat="@drawable/network_failure" />

                <Button
                    android:id="@+id/button_refresh"
                    style="@style/DarkButton"
                    android:layout_marginTop="@dimen/padding_small_12x"
                    android:text="@string/update" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?attr/android:colorBackground"
                android:clickable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@null"
                tools:visibility="visible">

                <ProgressBar
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/blue" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>