<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    style="@style/LayoutFullScreen"
    android:orientation="vertical"
    tools:ignore="VisualLintOverlap,MissingConstraints">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/Theme.PlaylistMaker.AppBarOverlay"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Theme.PlaylistMaker.PopupOverlay"
            app:title="@string/search" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        layout="@layout/layout_search" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_small_8x">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:background="?attr/android:colorBackground"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/sticky_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/bottom_menu_stub" />

            <FrameLayout
                android:id="@+id/nothing_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_screen_margin_top"
                android:background="?attr/android:colorBackground"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/AlertText"
                    android:text="@string/nothing_found"
                    app:drawableTopCompat="@drawable/nothing_found" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/network_failure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_screen_margin_top"
                android:background="?attr/android:colorBackground"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@null">

                <TextView
                    style="@style/AlertText"
                    android:text="@string/network_failure"
                    app:drawableTopCompat="@drawable/network_failure" />

                <Button
                    android:id="@+id/button_refresh"
                    style="@style/DarkButton"
                    android:layout_marginTop="@dimen/padding_small_12x"
                    android:text="@string/update" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_screen_margin_top"
                android:background="?attr/android:colorBackground"
                android:clickable="true"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@null">

                <ProgressBar
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/blue" />

            </FrameLayout>

            <com.practicum.playlistmaker.common.widgets.recycler.ParticleView
                android:id="@+id/particle_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/bottom_menu_stub"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_menu_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.practicum.playlistmaker.common.widgets.BlurredImageView
                android:id="@+id/blur_image_view_bottom_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:parentView="@id/bottom_menu_stub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>