<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_layout"
    style="@style/LayoutFullScreen"
    android:background="?attr/android:colorBackground"
    tools:context=".main.ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/Theme.PlaylistMaker.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Theme.PlaylistMaker.PopupOverlay"
            app:navigationIcon="@null"
            app:title="@string/app_name"
            app:titleTextColor="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:navGraph="@navigation/nav_graph"
        app:defaultNavHost="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_nav_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/bottom_nav_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/greyLight" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@android:color/transparent"
            app:menu="@menu/bottom_nav_menu"
            app:elevation="0dp"
            app:itemTextAppearanceActive="@style/BottomNavText_Active"
            app:itemTextAppearanceInactive="@style/BottomNavText"
            app:itemIconTint="@drawable/nav_color"
            app:itemTextColor="@drawable/nav_color"
            app:itemActiveIndicatorStyle="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_internet_msg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_small_8x"
        android:gravity="center_vertical"
        android:background="@color/activityMainBgColor"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:padding="0dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/ys_400"
            android:text="@string/no_internet_connection"
            android:enabled="false"
            app:icon="@drawable/no_internet"
            app:iconGravity="textStart"
            app:iconTint="@color/white" />

        <TextView
            android:id="@+id/btn_close_no_internet_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_500"
            android:textColor="@color/rippleColor"
            android:text="@string/close" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>