<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    style="@style/LayoutFullScreen"
    tools:ignore="ContentDescription">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/padding_small_8x" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/padding_small_8x" />

            <androidx.cardview.widget.CardView
                android:id="@+id/image_picker_card"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/padding_small_4x"
                android:layout_marginTop="@dimen/padding_small_13x"
                android:layout_marginBottom="@dimen/padding_small"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/padding_small_4x"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintDimensionRatio="w, 1:1">

                <ImageView
                    android:id="@+id/image_picker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_add_photo"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_title_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/CustomTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small_16x"
                app:boxStrokeColor="@color/input_text_stroke"
                app:hintTextColor="@color/input_text"
                app:layout_constraintTop_toBottomOf="@id/image_picker_card"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/playlist_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/CustomTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small_8x"
                app:boxStrokeColor="@color/input_text_stroke"
                app:hintTextColor="@color/input_text"
                app:layout_constraintTop_toBottomOf="@id/playlist_title_container"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:hint="@string/playlist_description" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_create_playlist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small_12x"
                android:layout_marginBottom="@dimen/padding_small_16x"
                android:enabled="false"
                android:text="@string/btn_create"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:inputType="textCapSentences"
                android:background="@drawable/button"
                android:elevation="0dp"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_container"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>